fixed whitespace under page

--- a/styles.css
+++ b/styles.css
@@ -21,10 +21,15 @@
   padding: 0;
 }
 
-html,
+html {
+  width: 100%;
+  min-height: 100%;
+}
+
 body {
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
+  overscroll-behavior-y: none; 
 }
 
 body {
